plugins {
  id "java-library"
  id "maven-publish"
  id "com.enonic.xp.base"
  id "com.github.node-gradle.node" version "7.1.0"
}

// XP 8 requires Java 25 (core-api declares osgi.ee=JavaSE;version=25), so pin the toolchain used to compile.
// Note this does not free the build from the JDK that runs Gradle itself: the com.enonic.xp.settings plugin in
// settings.gradle needs a Gradle JVM of 21 or newer, and fails during settings evaluation on anything older.
java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
  withJavadocJar()
  withSourcesJar()
}

dependencies {
  // ─────────────────────────────────────────────────────────────────────────
  // XP APIs the Java sources compile against. Provided by the XP runtime, so
  // they must not be bundled into the app.
  // ─────────────────────────────────────────────────────────────────────────
  // portal-api brings web-api and script-api along transitively.
  compileOnly xplibs.api.core
  compileOnly xplibs.api.portal

  // ─────────────────────────────────────────────────────────────────────────
  // Third party libraries bundled into the app
  // ─────────────────────────────────────────────────────────────────────────
  implementation "org.freemarker:freemarker:2.3.35"
  implementation "no.api.freemarker:freemarker-java8:3.0.3"

  // compileOnly does not reach the test classpath; this puts the XP APIs back on it.
  testImplementation xplibs.testing

  // Versions come from the BOMs so they cannot silently disagree with what xplibs.testing drags in
  testImplementation platform(libs.junit.bom)
  testImplementation platform(libs.mockito.bom)
  testImplementation libs.junit.jupiter
  testImplementation libs.mockito.core
  testImplementation libs.mockito.jupiter
  testRuntimeOnly libs.junit.launcher
  testRuntimeOnly libs.junit.engine
}

repositories {
  mavenLocal()
  mavenCentral()
  xp.enonicRepo()
  maven { url = "https://repo.itemtest.no/releases" }
}

node {
  download = true
  // Single source of truth for the Node version, shared with .github/workflows and nvm
  version = file(".nvmrc").text.trim()
}

processResources {
  exclude "**/.gitkeep"
  exclude "**/*.json"
  exclude "**/*.ts"
  exclude "**/*.tsx"
}

tasks.register("npmBuild", NpmTask) {
  args = [
    "run",
    "--silent",
    "build"
  ]
  dependsOn npmInstall
  environment = [
    "FORCE_COLOR": "true",
    "LOG_LEVEL_FROM_GRADLE": gradle.startParameter.logLevel.toString(),
    "NODE_ENV": isDevBuild() ? "development" : "production"
  ]
  inputs.dir "src/main/resources"
  outputs.dir "build/resources/main"
  outputs.upToDateWhen { false }
}

// Accepts -Penv=dev as well as the older -Pdev / -Pdevelopment spellings.
// The legacy flags have to be read straight off the command line: Gradle exposes tasks as project properties, so
// project.hasProperty("dev") is always true once the "dev" task below exists, which made every build a dev build.
boolean isDevBuild() {
  Map<String, String> cliProperties = gradle.startParameter.projectProperties

  return project.findProperty("env") == "dev" ||
    cliProperties.containsKey("dev") ||
    cliProperties.containsKey("development")
}

tasks.register("dev", Exec) {
  if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
    commandLine "cmd", "/c", "gradlew.bat", "deploy", "-t"
  } else {
    commandLine "./gradlew", "deploy", "-t"
  }
}

jar.dependsOn npmBuild

// npmBuild writes into build/resources/main, which is on the test compile classpath
compileTestJava.dependsOn npmBuild

tasks.register("npmCheck", NpmTask) {
  dependsOn npmInstall
  args = [
    "run",
    "check"
  ]
  environment = [
    "FORCE_COLOR": "true",
  ]
}

check.dependsOn npmCheck

tasks.test {
  useJUnitPlatform()
}

tasks.withType(Copy).configureEach {
  includeEmptyDirs = false
}

publishing {
  repositories {
    maven {
      name = "itemtestRepository"
      url = version.endsWith('SNAPSHOT')
        ? "https://repo.itemtest.no/snapshots"
        : "https://repo.itemtest.no/releases"
      credentials(PasswordCredentials)
      authentication {
        basic(BasicAuthentication)
      }
    }
  }
  publications {
    maven(MavenPublication) {
      from components.java
      // project.* qualified: inside a MavenPublication closure a bare "version" would
      // resolve to the publication's own property, not the project's.
      groupId = project.group
      artifactId = projectName
      version = project.version
    }
  }
}

javadoc {
  options.links(
    'https://docs.oracle.com/en/java/javase/25/docs/api/',
    'https://freemarker.apache.org/docs/api/'
  )

  dependsOn npmBuild
}
